2004/01/05 21:48 (+0100) kaffeetisch [test-suite-branch]

	R t/07.GtkBoxes.t
	* t/GtkBox.t
	R t/05.GtkListStore-etc.t
	* t/GtkListStore.t: Merge tests.

2004/01/05 17:18 (+0100) kaffeetisch [test-suite-branch]

	* t/GtkIconFactory.t: Initial import.

	* t/GtkTooltips.t: Test data_get more thoroughly.  Call
	force_window.

2004/01/04 21:33 (+0100) kaffeetisch [test-suite-branch]

	* t/GdkWindow.t: Add a title field to an attributes hash to hush a
	gdk warning.  Don't call begin_resize_drag and begin_move_drag.
	Don't check the last return value of get_geometry (the depth) as
	it may vary from machine to machine.  Don't call get_decorations
	because many window managers don't honor the set_decorations
	request.  Thanks to Ross for findind all of the above.

	* xs/GtkFontSelection.xs: Rearrange the accessor aliases so that no
	unneeded xsub is created.

2004/01/04 15:30 (+0100) kaffeetisch [test-suite-branch]

	R t/01.GtkWidget.t
	R t/02.GtkButton.t
	A t/02.GtkContainer.t
	R t/03.GtkGammaCurve.t
	R t/04.GtkSocket-GtkPlug.t
	R t/06.GtkLabel.t
	R t/08.GtkCombo.t
	R t/09.GtkRadioButton.t
	R t/10.GtkProgressBar.t
	R t/11.GtkStatusBar.t
	R t/12.GtkDialog.t
	R t/13.GtkTooltips.t
	R t/14.GtkToolbar.t
	R t/15.GtkHandleBox.t
	R t/16.GtkMenu-etc.t
	R t/17.GtkItemFactory.t
	R t/18.GtkNotebook.t
	R t/19.GtkSimpleList.t
	R t/21.GtkContainer.t
	R t/22.GtkListStore.t
	R t/23.GtkTreeStore.t
	R t/24.GtkTreeView.t
	R t/25.GtkTreeSelection.t
	R t/26.GtkSimpleMenu.t
	R t/27.GtkClipboard.t
	A t/GdkRegion.t
	A t/GdkWindow.t
	A t/GtkAccelGroup.t
	A t/GtkAccelLabel.t
	A t/GtkAdjustment.t
	A t/GtkAlignment.t
	A t/GtkArrow.t
	A t/GtkAspectFrame.t
	A t/GtkBin.t
	A t/GtkBox.t
	A t/GtkButton.t
	A t/GtkButtonBox.t
	A t/GtkCalendar.t
	A t/GtkCheckButton.t
	A t/GtkCheckMenuItem.t
	A t/GtkClipboard.t
	A t/GtkColorSelection.t
	A t/GtkColorSelectionDialog.t
	A t/GtkCombo.t
	A t/GtkDialog.t
	A t/GtkDrawingArea.t
	A t/GtkEntry.t
	A t/GtkEventBox.t
	A t/GtkFileSelection.t
	A t/GtkFixed.t